<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:foreground="@drawable/press_black_bg"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_list_order_time"
            android:textColor="@color/font_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvOrderTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/font_gray"
            android:textSize="14sp"
            tools:text="2018-11-11 11:30" />

        <TextView
            android:id="@+id/tvOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_gray"
            android:textSize="14sp"
            tools:text="@string/order_list_order_state_complete" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/ivPic"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                tools:src="@mipmap/ic_article_pic" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/font_black"
                android:textSize="16sp"
                tools:text="标题" />

            <TextView
                android:id="@+id/tvOrderType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_pink_bg"
                android:ellipsize="end"
                android:padding="2dp"
                android:textColor="@color/font_red"
                android:textSize="12sp"
                tools:text="@string/order_list_common" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_list_service_time"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvServiceTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="2018-11-11 11:30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrderPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="@string/order_list_common_price" />

                <TextView
                    android:id="@+id/tvOrderPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_red"
                    android:textSize="16sp"
                    tools:text="¥200" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>